cabal-version: 2.4
name: pratt
version: 0.0.1
author: ggzor
maintainer: 30713864+ggzor@users.noreply.github.com

test-suite pratt
  default-language: Haskell2010
  main-is: PrattSpec.hs
  build-depends:
      base >=4.14 && <5
    , hspec >=2.8 && <3
    , hspec-megaparsec >=2.2 && <3
    , megaparsec >=9 && <10
    , raw-strings-qq >=1.1 && <2
  type: exitcode-stdio-1.0
  other-modules: Pratt
